syntax = "proto3";

package messagepackage;

message Message {
  string msgId = 1;
  int32 type = 2;
  int32 sessionType = 3;
  string content = 4;
  int32 status = 5;
  int32 sender = 6;
  int32 reciver = 7;
  int64 time = 8;
  string ext = 9;
}

message Notify {
  string msgId = 1;
  int32 type = 2;
  int32 status = 3;
  int32 sender = 4;
  int32 reciver = 5;
  string remark = 6;
  string senderInfo = 7;
  int64 time = 8;
  string ext = 9;
}

message AckResponse {
  int32 code = 1;
	string msg = 2;
}
